--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
     color: #eaeaea;
 }
 
-.top-box {
+.top-box 
+{
     position: fixed;
     top: 0;
     left: 0;
@@ -24,6 +25,19 @@
     justify-content: space-between;
     box-sizing: border-box;
     z-index: 1000;
+}
+
+.top-box-content 
+{
+    text-align: left;
+}
+
+.top-box-content h4 
+{
+    margin: 0;
+    font-size: 24px;
+    color: #FFFFFF;
+    font-weight: 300;
 }
 
 .wrapper 
