--- a/style.css
+++ b/style.css
@@ -333,7 +333,8 @@ audio {
 @media screen and (max-width: 900px) 
 {
     .wrapper {
-        height: 125vh;
+        height: 100vh;
+        padding: 200px;
     }
     .container {
         flex-direction: column;
