--- a/style.css
+++ b/style.css
@@ -334,7 +334,8 @@ audio {
 {
     .wrapper {
         height: 100vh;
-        padding: 200px;
+        padding-top: 100px;
+        padding-bottom: 100px;
     }
     .container {
         flex-direction: column;
